fix: improve contrast in dark mode

--- a/styles.css
+++ b/styles.css
@@ -46,7 +46,7 @@ body[data-theme="light"] header {
 /* Dark theme */
 body[data-theme="dark"] {
   background-color: #121212;
-  color: rgb(241, 233, 233);
+  color: rgb(251, 245, 245);
 }
 
 body[data-theme="dark"] header {
